--- a/src/list/_set-nth.sass
+++ b/src/list/_set-nth.sass
@@ -9,7 +9,7 @@
 @use 'sass:meta'
 @use 'sass-exception/src/exception/is-separator-invalid'
 @use 'sass-exception/src/exception/separator'
-@use '../internal'
+@use 'sass-exception/src/exception/validate-index'
 
 
 ///
@@ -27,12 +27,12 @@
 /// @throw Must be "space", "comma", "slash", or "auto".
 ///
 /// @access public
-/// @require internal.validate-index
 /// @require is-separator-invalid.is-separator-invalid
 /// @require separator.separator
+/// @require validate-index.validate-index
 ///
 @function set-nth($list, $index, $value, $separator: auto)
-	$index: internal.validate-index('set-nth', 'index', $index, list.length($list))
+	$index: validate-index.validate-index('set-nth', 'index', $index, $list)
 
 	@if meta.type-of($index) != 'number'
 		@error $index
