--- a/src/list/compare/_string.sass
+++ b/src/list/compare/_string.sass
@@ -9,7 +9,7 @@
 @use 'sass:math'
 @use 'sass:meta'
 @use 'sass:string'
-@use 'sass-meta/src/meta/call-or-reference' as sass-meta
+@use 'sass-meta/src/meta/call-or-reference'
 @use '../../internal'
 
 
@@ -31,10 +31,10 @@
 ///
 /// @access public
 /// @require _string
-/// @require sass-meta.call-or-reference
+/// @require call-or-reference.call-or-reference
 ///
 @function string($args...)
-	@return sass-meta.call-or-reference(meta.get-function('_string'), $args...)
+	@return call-or-reference.call-or-reference(meta.get-function('_string'), $args...)
 
 
 ///
@@ -55,10 +55,10 @@
 ///
 /// @access public
 /// @require _string-desc
-/// @require sass-meta.call-or-reference
+/// @require call-or-reference.call-or-reference
 ///
 @function string-desc($args...)
-	@return sass-meta.call-or-reference(meta.get-function('_string-desc'), $args...)
+	@return call-or-reference.call-or-reference(meta.get-function('_string-desc'), $args...)
 
 
 ///
