Remove internal’s index

--- a/src/list/_insert-nth.sass
+++ b/src/list/_insert-nth.sass
@@ -9,7 +9,7 @@
 @use 'sass-exception/src/exception/is-separator-invalid'
 @use 'sass-exception/src/exception/separator'
 @use 'sass-exception/src/exception/validate-index'
-@use '../internal'
+@use '../internal/insert-nth'
 
 
 ///
@@ -27,7 +27,7 @@
 /// @throw Must be "space", "comma", "slash", or "auto".
 ///
 /// @access public
-/// @require internal.insert-nth
+/// @require insert-nth.insert-nth
 /// @require is-separator-invalid.is-separator-invalid
 /// @require separator.separator
 /// @require validate-index.validate-index
@@ -41,6 +41,6 @@
 	@if is-separator-invalid.is-separator-invalid($separator)
 		@error separator.separator('insert-nth')
 
-	@return internal.insert-nth($list, $index, $value, $separator)
+	@return insert-nth.insert-nth($list, $index, $value, $separator)
 
 
