--- a/test/list/_index.sass
+++ b/test/list/_index.sass
@@ -19,12 +19,12 @@
 		$expected: 4
 		@include true.assert-equal($assert, $expected)
 
-	@include true.it('Get an index for an item from an positive (+) offset of the list')
+	@include true.it('Get an index for an item from a positive (+) offset of the list')
 		$assert: src.index($list, 'b', 5)
 		$expected: 9
 		@include true.assert-equal($assert, $expected)
 
-	@include true.it('Get an index for an item from an negative (-) offset of the list')
+	@include true.it('Get an index for an item from a negative (-) offset of the list')
 		$assert: src.index($list, 'b', -3)
 		$expected: 9
 		@include true.assert-equal($assert, $expected)
@@ -34,7 +34,7 @@
 		$expected: 0
 		@include true.assert-equal($assert, $expected)
 
-	@include true.it('Throws when $from-index is not an number')
+	@include true.it('Throws when $from-index is not a number')
 		$assert: src.index(null, null, null)
 		$expected: 'ERROR: $from-index: `null` is not a number for `index()`.'
 		@include true.assert-equal($assert, $expected)
