--- a/test/list/_map.sass
+++ b/test/list/_map.sass
@@ -64,7 +64,7 @@
 		$expected: list.join(list.slash(2, 4, 2, 4, 2, 4, 2, 4), (), $bracketed: true)
 		@include true.assert-equal($assert, $expected)
 
-	@include true.it('Throws when $transformer is not an function')
+	@include true.it('Throws when $transformer is not a function')
 		$assert: src.map(null, null)
 		$expected: 'ERROR: $transformer: `null` is not a function for `map()`.'
 		@include true.assert-equal($assert, $expected)
