--- a/test/list/_sort.sass
+++ b/test/list/_sort.sass
@@ -217,12 +217,12 @@
 		$expected: (a 1) (b 2)
 		@include true.assert-equal($assert, $expected, '[multiple values; space]')
 
-	@include true.it('Throws when $compare is not an function')
+	@include true.it('Throws when $compare is not a function')
 		$assert: src.sort(null, null)
 		$expected: 'ERROR: $compare: `null` is not a function for `sort()`.'
 		@include true.assert-equal($assert, $expected)
 
-	@include true.it('Throws when $center is not an number')
+	@include true.it('Throws when $center is not a number')
 		$assert: src.sort(null, $center: null)
 		$expected: 'ERROR: $center: `null` is not a number for `sort()`.'
 		@include true.assert-equal($assert, $expected)
