Fix some grammar

--- a/src/list/_find-nth.sass
+++ b/src/list/_find-nth.sass
@@ -10,7 +10,7 @@
 
 
 ///
-/// Returns the index of the first item from a list that satisfies the test implemented by the specified function; otherwise, 0 is returned, indicating that no item satisfies the test.
+/// Returns the index of the first item from a list that satisfies the test implemented by the specified function; otherwise, 0 is returned, indicating no item satisfies the test.
 ///
 /// @param {List} $list - The list from which items will be tested.
 /// @param {Function} $predicate - The function that tests each item for a condition. The first parameter is the current item being processed in the list. The second parameter is the index of the current item being processed in the list. The third parameter is the list being processed. The returned value will be compared for truthiness.
