--- a/src/list/compare/_string.sass
+++ b/src/list/compare/_string.sass
@@ -61,7 +61,7 @@
 
 
 ///
-/// The list that define the sort order for UTF-16 code units.
+/// The list that defines the sort order for UTF-16 code units.
 ///
 /// @type List
 ///
