--- a/src/list/_index.sass
+++ b/src/list/_index.sass
@@ -11,7 +11,7 @@
 
 
 ///
-/// Returns the first index at which a specified item can be found in a list; otherwise, 0 is returned, indicating that the item is not present.
+/// Returns the first index at which a specified item can be found in a list; otherwise, 0 is returned, indicating the item is not present.
 ///
 /// @param {List} $list - The list from which the value is to be located.
 /// @param {*} $value - The value to locate in the list.
