--- a/src/list/_to-string.sass
+++ b/src/list/_to-string.sass
@@ -6,7 +6,7 @@
 ////
 
 @use 'sass:meta'
-@use 'sass-exception/src/core/from' as core
+@use 'sass-exception/src/core/from'
 @use 'sass-exception/src/exception/parameter-type'
 
 
@@ -17,7 +17,7 @@
 /// @return {String}
 ///
 /// @access public
-/// @require core.to-string
+/// @require from.to-string
 /// @require parameter-type.parameter-type
 ///
 @function to-string($list)
@@ -26,4 +26,4 @@
 	@if $type != 'list' and $type != 'map' and $type != 'arglist'
 		@error parameter-type.parameter-type('to-string', 'list', $list, 'list', 'map', 'arglist')
 
-	@return core.to-string($list, 'list')
+	@return from.to-string($list, 'list')
