--- a/src/list/compare/_numeric.sass
+++ b/src/list/compare/_numeric.sass
@@ -7,6 +7,7 @@
 
 @use 'sass:math'
 @use 'sass:meta'
+@use 'sass-module-math/src/math/change'
 @use 'sass-meta/src/meta/call-or-reference'
 
 
@@ -67,6 +68,7 @@
 /// @return {Number}
 ///
 /// @access private
+/// @require change.change
 ///
 @function _numeric($first-item, $second-item, $center: 0)
 
@@ -80,12 +82,12 @@
 	$first-test: math.is-unitless($first-item)
 	$second-test: math.is-unitless($second-item)
 
-	// Strip units -OR- normalize units for incompatible and unitless numbers
+	// Normalize units for incompatible and unitless numbers
 	@if $center-test and not $first-test or $first-test or not math.compatible($first-item, $center)
-		$first-item: math.div($first-item, $first-item * 0 + 1) * ($center + 1)
+		$first-item: change.change($first-item, $center)
 
 	@if $center-test and not $second-test or $second-test or not math.compatible($second-item, $center)
-		$second-item: math.div($second-item, $second-item * 0 + 1) * ($center + 1)
+		$second-item: change.change($second-item, $center)
 
 	@return $first-item - $second-item
 
